--- a/app.html
+++ b/app.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
-
   <meta charset="utf-8">
   <title>Controle de Validades</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,46 +9,60 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#343a40">
 
+  <!-- CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css">
 
-  <!-- Proteção -->
+  <!-- Proteção simples (login local) -->
   <script>
     if (localStorage.getItem("auth") !== "true") {
       window.location.href = "index.html";
     }
   </script>
-
 </head>
 
-<body class="container py-3">
+<body
+  class="container py-3"
+  style="
+    background-image: url('images/armazem3.jpg');
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+  "
+>
 
-  <div class="d-flex justify-content-between align-items-center mb-2">
-    <h5>Controle de Validades</h5>
+  <!-- TOPO -->
+  <div class="d-flex justify-content-between align-items-center mb-3 bg-light p-2 rounded">
+    <h5 class="mb-0">Controle de Validades</h5>
     <button class="btn btn-danger btn-sm" onclick="logout()">Sair</button>
   </div>
 
-  <p>Usuário: <strong id="usuarioLogado"></strong></p>
+  <p class="text-light">
+    Usuário: <strong id="usuarioLogado"></strong>
+  </p>
 
-  <!-- Scanner -->
+  <!-- SCANNER -->
   <div class="text-center my-3">
     <button class="btn btn-primary" onclick="iniciarScanner()">📷 Escanear Produto</button>
   </div>
 
   <div id="scanner" class="mb-3"></div>
 
-  <!-- Lista -->
-  <table class="table table-bordered">
-    <thead class="thead-dark">
-      <tr>
-        <th>Produto</th>
-        <th>Qtd</th>
-        <th>Validade</th>
-        <th>Ação</th>
-      </tr>
-    </thead>
-    <tbody id="listaProdutos"></tbody>
-  </table>
+  <!-- LISTA -->
+  <div class="table-responsive bg-white rounded">
+    <table class="table table-bordered mb-0">
+      <thead class="thead-dark">
+        <tr>
+          <th>Produto</th>
+          <th>Qtd</th>
+          <th>Validade</th>
+          <th>Ação</th>
+        </tr>
+      </thead>
+      <tbody id="listaProdutos"></tbody>
+    </table>
+  </div>
 
+  <!-- EXPORTAR -->
   <button class="btn btn-success btn-block mt-3" onclick="exportarPDF()">
     Exportar PDF
   </button>
@@ -64,7 +77,21 @@
   <!-- SERVICE WORKER -->
   <script>
     if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("sw.js");
+      navigator.serviceWorker.register("sw.js")
+        .then(() => console.log("Service Worker registrado"))
+        .catch(err => console.error("Erro no SW:", err));
+    }
+  </script>
+
+  <!-- LOGOUT LOCAL -->
+  <script>
+    document.getElementById("usuarioLogado").innerText =
+      localStorage.getItem("usuario") || "";
+
+    function logout() {
+      localStorage.removeItem("auth");
+      localStorage.removeItem("usuario");
+      window.location.href = "index.html";
     }
   </script>
 
