Add scanner div to app.html
Added a scanner div for product scanning functionality.

--- a/app.html
+++ b/app.html
@@ -51,8 +51,8 @@
     </button>
   </div>
 
-  <!-- CAMERA -->
-  <video id="video" class="w-100 mb-3" style="max-height:300px" autoplay muted playsinline></video>
+  <!-- SCANNER -->
+  <div id="scanner" class="mb-3"></div>
 
   <!-- LISTA -->
   <div class="table-responsive bg-white rounded">
@@ -88,6 +88,8 @@
 
 </body>
 </html>
+
+
 
 
 
