Add footer with branding and credits
Added footer section with branding and credits.

--- a/app.html
+++ b/app.html
@@ -73,6 +73,12 @@
     Exportar PDF
   </button>
 
+  <!-- RODAPÉ -->
+  <footer class="text-center mt-4 text-light">
+    <img src="images/edw.png" width="50" height="50" alt="E-DW">
+    <p class="mt-2 mb-0">Produzido por Sistema E-DW forms</p>
+  </footer>
+
   <!-- PDF -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
@@ -88,7 +94,6 @@
 
 </body>
 </html>
-
 
 
 
