--- a/app.html
+++ b/app.html
@@ -89,14 +89,15 @@
   <script src="js/app.js"></script>
 
   <!-- SERVICE WORKER -->
-  <script>
+<!--  <script>
     if ("serviceWorker" in navigator) {
       navigator.serviceWorker.register("sw.js");
     }
-  </script>
+  </script> -->
 
 </body>
 </html>
+
 
 
 
